# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  api.yaml  database.db  pyproject.toml
.github/: CODEOWNERS
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_add_base_public_models.py  08185b82777d_add_hashed_password_to_student.py  6fe10951007a_create_tables.py  a0e51b9d2a08_auto.py  a5528edf7870_your_message.py  c5b401dce71a_comment.py  f1313f5bf38c_create_tables.py
app/: database.py  main.py  models.py
app/bootstrap/: __init__.py  roles_permissions.py
app/core/: auth.py  config.py
app/db/: database.py
app/dependencies/: auth.py  repositories.py  services.py  session.py
app/models/: __init__.py  base.py  projects.py  sprints.py  students.py  token_blacklist.py
app/models/auth/: rbac.py  refresh_session.py
app/models/projects/: project.py  project_member.py  team.py  team_membership.py
app/models/sprints/: sprint.py  sprint_task.py  task_assignment.py  task_change_request.py
app/models/students/: busy_slot.py  (+1 more)
app/repositories/: rbac.py  refresh_session.py
app/routers/: __init__.py  auth.py  projects.py  sprints.py  students.py
app/schemas/: auth.py  base.py  projects.py  sprints.py  students.py
app/services/: blacklist.py  busy_slot.py  project.py  project_member.py  projects.py  rbac.py  refresh_session.py  sprint.py  sprint_task.py  sprints.py  student.py  students.py  task_assignment.py  task_change_request.py  team.py  team_membership.py
app/utils/: hasher.py  repository.py
(+10 files in other folders)
