[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.22",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.6.1",
    "asyncpg>=0.30.0",
    "alembic>=1.13.2",
    "pwdlib>=0.3.0",
    "jwt>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "F",
    "FAST",
    "PL",
    "I",
    "ARG",
    "RET",
    "ASYNC",
    "B",
    "A",
    "ICN",
    "SLF",
    "SIM",
    "C90",
    "N",
    "W"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
